--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
     <h2>date</h2>
     <calendar-date
       id="date"
-      value="2020-01-01"
+      value="2020-04-01"
       min="2019-11-01"
       max="2025-03-20"
       months="2"
+      show-outside-days
     >
       <label for="yearSelect" class="vh">Year:</label>
       <select id="yearSelect">
@@ -67,7 +68,7 @@
         <option value="2028">2028</option>
       </select>
 
-      <div style="display: flex; gap: 1em">
+      <div class="grid">
         <calendar-month></calendar-month>
         <calendar-month offset="1"></calendar-month>
       </div>
