--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
         position: absolute;
         transform: scale(0);
       }
+
+      #date::part(header) {
+        gap: 1em;
+      }
+      #date::part(heading) {
+        flex: 1;
+      }
+
+      #date select {
+        width: 100%;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -54,19 +66,21 @@
       months="2"
       show-outside-days
     >
-      <label for="yearSelect" class="vh">Year:</label>
-      <select id="yearSelect">
-        <option value="2019">2019</option>
-        <option value="2020" selected>2020</option>
-        <option value="2021">2021</option>
-        <option value="2022">2022</option>
-        <option value="2023">2023</option>
-        <option value="2024">2024</option>
-        <option value="2025">2025</option>
-        <option value="2026">2026</option>
-        <option value="2027">2027</option>
-        <option value="2028">2028</option>
-      </select>
+      <div slot="heading">
+        <label for="yearSelect" class="vh">Year:</label>
+        <select id="yearSelect">
+          <option value="2019">2019</option>
+          <option value="2020" selected>2020</option>
+          <option value="2021">2021</option>
+          <option value="2022">2022</option>
+          <option value="2023">2023</option>
+          <option value="2024">2024</option>
+          <option value="2025">2025</option>
+          <option value="2026">2026</option>
+          <option value="2027">2027</option>
+          <option value="2028">2028</option>
+        </select>
+      </div>
 
       <div class="grid">
         <calendar-month></calendar-month>
