add pageBy prop for controlling pagination behavior

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       max="2025-03-20"
       months="2"
       show-outside-days
+      page-by="single"
     >
       <div slot="heading">
         <label for="yearSelect" class="vh">Year:</label>
