--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <h2>multi</h2>
     <calendar-multi
-      id="date"
+      id="multi"
       months="2"
       show-outside-days
       value="2024-05-07 2024-05-09"
