render months as default slot content

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
       </div>
     </calendar-multi>
 
+    <h2>Simple date</h2>
+
+    <calendar-date months="2"></calendar-date>
+
     <script type="module">
       import "./src/index.ts";
 
