--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       if (window.range) {
         let start = null;
 
-        window.range.getPartsForDate = (date) => {
+        window.range.getDayParts = (date) => {
           const d = date.getUTCDate();
 
           if (d % 5 === 0) return "foo";
