fix simple case

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         background: blue;
       }
 
-      #simple::part(slot) {
+      #simple::part(months) {
         display: flex;
         gap: 1em;
       }
-      #simple2::part(slot) {
+      #simple2::part(months) {
         display: flex;
         gap: 1em;
       }
