add label to week number col

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       min="2024-02-10"
       max="2025-10-10"
       value="2024-02-12/2025-02-20"
+      show-week-numbers
     >
       <div class="grid">
         <calendar-month></calendar-month>
