--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       min="2024-02-10"
       max="2025-10-10"
       value="2024-02-12/2025-02-20"
+      show-week-numbers
     >
       <calendar-month></calendar-month>
       <calendar-month offset="1"></calendar-month>
