--- a/index.html
+++ b/index.html
@@ -99,15 +99,7 @@
     </calendar-range>
 
     <h2>date</h2>
-    <calendar-date
-      id="date"
-      value="2020-04-01"
-      min="2019-11-01"
-      max="2025-03-20"
-      months="2"
-      show-outside-days
-      page-by="single"
-    >
+    <calendar-date id="date" value="2022-03-15" months="2" page-by="single">
       <svg
         aria-label="Previous"
         slot="previous"
